# propositional-model-compression

./: .gitignore  CMakeLists.txt  README.md
src/: CompressionMain.cpp  DecompressionMain.cpp
src/parser/: Parser.h  SATTypes.h  StreamBuffer.h
src/propagation/: Heuristics.h  Propagation.h
src/util/: BitvectorEncoding.h  Output.h  StringCompression.h  Vec.h
